--- a/app.yaml
+++ b/app.yaml
@@ -15,19 +15,36 @@
 
 # entrypoint: gunicorn -b :$PORT core.wsgi
 
+# # [START django_app]
+# service: noteapp-react-django-uzafir
+# runtime: python38
+# handlers:
+
+
+# - url: /(.*\..+)$
+#   static_files: noteapp_react/build/\1
+#   upload: noteapp_react/build/(.*\..+)$
+# # Catch all handler to index.html
+# - url: /.*
+#   static_files: noteapp_react/build/index.html
+#   upload: noteapp_react/build/index.html
+  
+  
+# entrypoint: gunicorn -b :$PORT notesite.wsgi
+
 # [START django_app]
 service: noteapp-react-django-uzafir
 runtime: python38
 handlers:
-
-
-- url: /(.*\..+)$
-  static_files: noteapp_react/build/\1
-  upload: noteapp_react/build/(.*\..+)$
-# Catch all handler to index.html
+# This configures Google App Engine to serve the files in the app's
+# static directory.
+- url: /static
+  static_dir: static/
+# This handler routes all requests not caught above to the main app.
+# It is required when static routes are defined, but can be omitted
+# (along with the entire handlers section) when there are no static
+# files defined.
 - url: /.*
-  static_files: noteapp_react/build/index.html
-  upload: noteapp_react/build/index.html
-  
-  
+  script: auto
+
 entrypoint: gunicorn -b :$PORT notesite.wsgi
